fixxed .html error

--- a/num2.html
+++ b/num2.html
@@ -10,7 +10,7 @@
       <a href="index.html"><div class="n1"></div></a>
       <div class="n2"></div>
       <div class="n3"></div>
-      <a href="num4"><div class="n4"></div></a>
+      <a href="num4.html"><div class="n4"></div></a>
     </div>
   </body>
 </html>
