create a home page

--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
-    <title>Move!</title>
+    <title>Caleb Washburns Server</title>
   </head>
   <body>
-    <div class="holder">
-      <div class="n1"></div>
-      <a href="num2.html"><div class="n2"></div></a>
-      <a href="num3.html"><div class="n3"></div></a>
-      <div class="n4"></div>
-    </div>
+    <h1>Welcome to Caleb's Server (El Guapo)</h1>
+    <h2>Hola a todos!</h2>
+    <p>Here is a <a href="num1.html">link</a> to move Caleb</p>
   </body>
 </html>
