--- a/num3.html
+++ b/num3.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="holder">
-      <a href="index.html"><div class="n1"></div></a>
+      <a href="num1.html"><div class="n1"></div></a>
       <div class="n2"></div>
       <div class="n3"></div>
       <a href="num4.html"><div class="n4"></div></a>
